--- a/videoClips.html
+++ b/videoClips.html
@@ -34,7 +34,7 @@
         </div>
 
         <video class=videoPlayer controls height="600" width="800">
-            <source src="/MySite/videoClips/CSGO OcG. KIN  (Test).mp4" type="video/mp4">
+            <source src="/videoClips/CSGO OcG. KIN  (Test).mp4" type="video/mp4">
         </video>    
         
         <div class="spacer"> </div>
