--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum delectus rem m
 
         <div id="Clips">
             <video class=videoPlayerMain controls height="400" width="600">
-                <source src="/videoClips/CSGO OcG. KIN  (Test).mp4" type="video/mp4">
+                <source src="videoClips/CSGO-OcGKaIN(Test).mp4" type="video/mp4">
             </video>
         </div>
 
